# Strirus_project

strirus_controllers/: CMakeLists.txt  package.xml
strirus_controllers/config/: strirus_controller.yaml
strirus_controllers/launch/: strirus_controller.launch
strirus_controllers/scripts/: generic_text_for_launchs.py  mover.py
strirus_ga_body_optimization/: CMakeLists.txt  package.xml  prev_dich
strirus_ga_body_optimization/launch/: body_optimization.launch  empty_world.launch  full_world_generation.launch  ga_optimization.launch  strirus_gazebo_with_auto_move_forward.launch  whole_worlds_generation.launch
strirus_ga_body_optimization/maps/Generated_terrain/: model.config  model.sdf
strirus_ga_body_optimization/results/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/coef 1.5_1 rand 6 iter/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/coef 1_1 rand 7 iter/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/coef 2_1 rand 6 iter/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/coef 2_1 rand 7 iter/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/from_machines_1_time/machine_1_gauss/maps/Generated_terrain_0/: model.sdf
strirus_ga_body_optimization/results/from_machines_1_time/machine_1_gauss/maps/Generated_terrain_1/: model.sdf
strirus_ga_body_optimization/results/from_machines_1_time/machine_1_gauss/maps/Generated_terrain_10/: model.sdf
strirus_ga_body_optimization/results/from_machines_1_time/machine_1_gauss/results/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/from_machines_1_time/machine_1_gauss/worlds/: testing_area_0.world  testing_area_2.world  testing_area_5.world  testing_area_7.world  testing_area_9.world
strirus_ga_body_optimization/results/from_machines_1_time/machine_2_rand/results/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/from_machines_1_time/machine_2_rand/worlds/: testing_area_11.world  testing_area_3.world  testing_area_4.world  testing_area_8.world
strirus_ga_body_optimization/results/from_machines_1_time/machine_3_normal/results/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/from_machines_1_time/machine_3_normal/worlds/: testing_area_1.world  testing_area_10.world  testing_area_6.world
strirus_ga_body_optimization/results/last_calc_rand/: all_data.txt  log_data.txt
strirus_ga_body_optimization/results/log_data_1000/: dist_set_001_008.txt  dist_set_0079_016.txt  dist_set_0159_0195.txt
strirus_ga_body_optimization/results/prelast_200/: body_optimization.launch  log_data.txt
strirus_ga_body_optimization/results/prelast_calc/: all_data.txt  body_optimization.launch  log_data.txt
strirus_ga_body_optimization/scripts/: Listener_class.py  body_ga_optimiziation.py  full_world_generation.py  ga_body_optimization.py  launch_several_gazebo_sim.py  move_forward.py
strirus_ga_body_optimization/src/: Listener_class.py  clock_dist_listener.py  ga_body_optimization.py  listener_class.py  logger.py  move_forward.py  whole_worlds_generation.py
strirus_ga_body_optimization/worlds/: testing_area.world
strirus_gazebo/: CMakeLists.txt  package.xml
strirus_gazebo/launch/: strirus_gazebo.launch  strirus_gazebo_with_auto_move_forward.launch
strirus_gazebo/launch/gazebo_area_sets/: strirus_ladder.launch  strirus_rand_terrain.launch
strirus_gazebo/launch/rhex_area_sets/: rhex_45deg_slope.launch  rhex_nature_terrain.launch  rhex_rand_terrain.launch
strirus_gazebo/maps/Generated_terrain/: model.sdf
strirus_gazebo/maps/Ladder/: model.sdf
strirus_gazebo/maps/Slope_45deg/: model.sdf  triangle.stl
strirus_gazebo/scripts/: generating_terrain.py  move_forward.py
strirus_gazebo/worlds/: testing_area.world  testing_area_45_deg_slope.world  testing_area_ladder.world  testing_area_nature_terrain.world
strirus_robot_description/: CMakeLists.txt  package.xml
strirus_robot_description/launch/: strirus_rviz_in_static.launch
strirus_robot_description/meshes/Mesh characteristics/: body_data.txt  leg_data.txt
strirus_robot_description/meshes/prt(NX)/: body.prt  leg.prt
strirus_robot_description/meshes/stl/: double_leg_30_degree.stl  leg_20_degree.stl  leg_30_degree.stl  leg_30_degree_normal.stl  leg_l_rhex.stl  leg_r_rhex.stl  leg_strirus.stl
strirus_robot_description/rviz/: static.rviz
strirus_robot_description/urdf/: model.config  rhex.xacro  strirus.gazebo  strirus.urdf  strirus.xacro  strirus_plugins.gazebo
(+33 files in other folders)
