<?xml version="1.0"?>
<package>
  <name>strirus_controllers</name>
  <version>1.0.0</version>
  <description>The strirus_controllers package</description>

  <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>

  <author email="obulichev@yandex.ru">Bulichev Oleg</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>strirus_robot_description</run_depend>
  <run_depend>controller_manager</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
