<?xml version="1.0"?>
<package>
  <name>strirus_gazebo</name>
  <version>0.0.0</version>
  <description>The strirus_gazebo package</description>

<maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>

  <author email="obulichev@yandex.ru">Bulichev Oleg</author>
 <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>strirus_robot_description</run_depend>
  <run_depend>strirus_controllers</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 

  </export>
</package>
