<?xml version="1.0"?>
<package>
  <name>strirus_robot_description</name>
  <version>1.0.0</version>
  <description>The strirus_robot_description package</description>

 <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>

  <author email="obulichev@yandex.ru">Bulichev Oleg</author>
 <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
